--- a/lab5/lab5/lab5.vcxproj
+++ b/lab5/lab5/lab5.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="DateImp.cpp" />
     <ClCompile Include="EducationImp.cpp" />
     <ClCompile Include="EmployeeImp.cpp" />
+    <ClCompile Include="Faculty.cpp" />
     <ClCompile Include="StaffImp.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -156,6 +157,7 @@
     <ClInclude Include="Date.h" />
     <ClInclude Include="Education.h" />
     <ClInclude Include="Employee.h" />
+    <ClInclude Include="Faculty.h" />
     <ClInclude Include="Staff.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
