--- a/lab5/lab5/lab5.vcxproj
+++ b/lab5/lab5/lab5.vcxproj
@@ -150,7 +150,9 @@
     <ClCompile Include="EducationImp.cpp" />
     <ClCompile Include="EmployeeImp.cpp" />
     <ClCompile Include="Faculty.cpp" />
+    <ClCompile Include="PartTime.cpp" />
     <ClCompile Include="StaffImp.cpp" />
+    <ClCompile Include="TestDriver.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Constant.h" />
@@ -158,6 +160,7 @@
     <ClInclude Include="Education.h" />
     <ClInclude Include="Employee.h" />
     <ClInclude Include="Faculty.h" />
+    <ClInclude Include="PartTime.h" />
     <ClInclude Include="Staff.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
