--- a/lab7polar/lab7polar/lab7polar.vcxproj.filters
+++ b/lab7polar/lab7polar/lab7polar.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="PolarTest.cpp">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="Safearray.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Polar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Safearray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
